--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>vue-pwa-onsenui</title>
-  <link rel="icon" type="image/png" sizes="32x32" href="/static/img/icons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/static/img/icons/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./static/img/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./static/img/icons/favicon-16x16.png">
   <!--[if IE]><link rel="shortcut icon" href="/static/img/icons/favicon.ico"><![endif]-->
   <!-- Add to home screen for Android and modern mobile browsers -->
   <meta name="theme-color" content="#4DBA87">
@@ -16,11 +16,11 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="vue-pwa-onsenui">
-  <link rel="apple-touch-icon" href="/static/img/icons/apple-touch-icon-152x152.png">
+  <link rel="apple-touch-icon" href="./static/img/icons/apple-touch-icon-152x152.png">
   <!-- Add to home screen for Windows -->
-  <meta name="msapplication-TileImage" content="/static/img/icons/msapplication-icon-144x144.png">
+  <meta name="msapplication-TileImage" content="./static/img/icons/msapplication-icon-144x144.png">
   <meta name="msapplication-TileColor" content="#000000">
-  <link rel="stylesheet" href="static/css/spinner.css">
+  <link rel="stylesheet" href="./static/css/spinner.css">
 </head>
 
 <body>
